Thu Jun 13 18:16:46 BST 2002  Colin Watson  <cjwatson@debian.org>

	* po/ca.po: Some updates after review.

Wed Jun 12 18:29:18 BST 2002  Colin Watson  <cjwatson@debian.org>

	* docs/ToDo: Updates.
	* po/ca.po: New from Translation Project.

Wed Jun  5 14:23:13 BST 2002  Colin Watson  <cjwatson@debian.org>

	* po/de.po: Update from Translation Project.

Tue Jun  4 13:15:09 BST 2002  Colin Watson  <cjwatson@debian.org>

	* src/man.c (compare_candidates): Return 0 when asked to compare two
	  candidates we can't distinguish, not -1. The latter broke
	  multilingual support.

Tue Jun  4 01:33:31 BST 2002  Colin Watson  <cjwatson@debian.org>

	* Version: 2.3.90 (for translators).
	* docs/NEWS: More updates.
	* po/cs.po, po/da.po, po/de.po, po/es.po, po/fr.po, po/it.po,
	  po/ja.po: Update with msgmerge.

Tue May 28 00:36:55 BST 2002  Colin Watson  <cjwatson@debian.org>

	* libdb/db_lookup.c (dblookup): Check the MATCH_CASE flag in the
	  case of a single entry as well as multiple entries.

Mon May 27 23:57:26 BST 2002  Colin Watson  <cjwatson@debian.org>

	* lib/hashtable.c, lib/hashtable.h: New files, containing the
	  generic parts of src/hashtable.{c,h}.
	* lib/Makefile.in: Add hashtable.c.
	* src/hashtable.c (hash, lookup, install): Remove. These functions
	  have been renamed and moved to lib/hashtable.c.
	  (free_defn): Rename to man_hash_free and update for new hashtable
	  API.
	  (free_hashtab): Update for new hashtable API.
	* src/hashtable.h: Update prototypes.

	* libdb/db_btree.c (btree_findkey): Check for entries we've seen
	  before in the current run. These indicate a corrupt database
	  containing a loop.

Thu May 23 01:50:53 BST 2002  Colin Watson  <cjwatson@debian.org>

	* lib/cleanup.h: #endif must not be followed by a token on the same
	  line.

Thu May 23 00:29:24 BST 2002  Colin Watson  <cjwatson@debian.org>

	* src/fake_security.c (get_man_owner): New fake function to match
	  the real one in src/security.c.