@@ -287,7 +287,7 @@ AC_CHECK_HEADERS(string.h strings.h, break)
 dnl
 dnl Internationalization support.
 dnl
-ALL_LINGUAS="cs da de es fr it ja"
+ALL_LINGUAS="ca cs da de es fr it ja"
 AM_GNU_GETTEXT
 AC_SUBST(LINGUAS)dnl
 dnl
