@@ -1,3 +1,10 @@
+Mon Jun 17 09:56:15 UTC 2002  Colin Watson  <cjwatson@debian.org>
+
+	* configure.in (ALL_LINGUAS): Add ca.
+	* src/man.c: Update some comments.
+	* src/lexgrog.l: Treat \~ as a space. Treat \# as a comment. Treat
+	  .ig as ending the whatis.
+
 Thu Jun 13 18:16:46 BST 2002  Colin Watson  <cjwatson@debian.org>
 
 	* po/ca.po: Some updates after review.
